--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "babel-loader": "^8.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.4.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
